@@ -7,7 +7,7 @@
 
 <p><%= link_to 'Hospedes', :controller => "hospedes", :action => "index" %></p>
 <p><%= link_to 'Reservas', :controller => "reservas", :action => "index" %></p>
-<p><%= link_to 'Tipos de apartamentos', :controller => "tipoApt", :action => "index" %></p>
+<p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
 <p><%= link_to 'Serviços', :controller => "servicos", :action => "index" %></p>
 <p><%= link_to 'Logout', :controller => "admin", :action => "logout" %></p>
 
