@@ -1,4 +1,7 @@
 2009-05-04 Iuri Fernandes <iurifq@gmail.com>
+* Created Tipo_Apartamentos scaffolding.
+
+2009-05-04 Iuri Fernandes <iurifq@gmail.com>
 * Created foreign key for apartamento.
 
 2009-05-02 Iuri Fernandes <iurifq@gmail.com>
